2020-09-04  Adrian Perez de Castro  <aperez@igalia.com>

        Unreviewed. [WPE] Bump version numbers

        * Source/cmake/OptionsWPE.cmake:

2020-09-04  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. [GTK] Bump version numbers

        * Source/cmake/OptionsGTK.cmake:

2020-09-02  Philippe Normand  <pnormand@igalia.com>

        [Flatpak SDK] Update to FDO 20.08
        https://bugs.webkit.org/show_bug.cgi?id=215763

        Reviewed by Žan Doberšek.

        * .gitignore: Ignore buildstream local Flatpak repository. This is created only when
        manually building the SDK.

2020-08-31  Stephan Szabo  <stephan.szabo@sony.com>

        [PlayStation] Build fix for intermittent copy errors
        https://bugs.webkit.org/show_bug.cgi?id=215951

        Reviewed by Ross Kirsling.

        * Source/cmake/OptionsPlayStation.cmake:
        When copying platform specific files into the binary
        directory post build on executable targets, we'd
        intermittently get copy errors in parallel builds.

2020-08-28  Adrian Perez de Castro  <aperez@igalia.com>

        [WPE] Enable Notifications support
        https://bugs.webkit.org/show_bug.cgi?id=215924

        Reviewed by Philippe Normand.

        Enable web notifications support for the WPE port. The code is shared with the GTK
        port, but as we do not try to find and enable libnotify the default implementation
        is a stub: embedders can customize how to display notifications by connecting to
        the WebKitWebView:show-notification signal. This way we do not add any additional
        build dependencies.

        * Source/cmake/OptionsWPE.cmake: Flip ENABLE_NOTIFICATIONS to ON.

2020-08-27  Stephan Szabo  <stephan.szabo@sony.com>

        [PlayStation] Build fix due to memmem not always being available.
        https://bugs.webkit.org/show_bug.cgi?id=215893

        Unreviewed build fix

        * Source/cmake/OptionsPlayStation.cmake: Check for memmem
