@@ -85,7 +85,6 @@ list(APPEND WebCore_LIBRARIES
     ${GLIB_GMODULE_LIBRARIES}
     ${GLIB_GOBJECT_LIBRARIES}
     ${GLIB_LIBRARIES}
-    ${LIBSECCOMP_LIBRARIES}
     ${LIBSECRET_LIBRARIES}
     ${LIBTASN1_LIBRARIES}
     ${HYPHEN_LIBRARIES}
@@ -109,7 +108,6 @@ list(APPEND WebCore_SYSTEM_INCLUDE_DIRECTORIES
     ${ENCHANT_INCLUDE_DIRS}
     ${GIO_UNIX_INCLUDE_DIRS}
     ${GLIB_INCLUDE_DIRS}
-    ${LIBSECCOMP_INCLUDE_DIRS}
     ${LIBSECRET_INCLUDE_DIRS}
     ${LIBTASN1_INCLUDE_DIRS}
     ${UPOWERGLIB_INCLUDE_DIRS}
@@ -169,6 +167,10 @@ if (ENABLE_GAMEPAD)
     list(APPEND WebCore_LIBRARIES
         Manette::Manette
     )
+endif ()
+
+if (ENABLE_BUBBLEWRAP_SANDBOX)
+    list(APPEND WebCore_LIBRARIES Libseccomp::Libseccomp)
 endif ()
 
 include_directories(SYSTEM
