@@ -281,7 +281,6 @@ list(APPEND WebKit_SYSTEM_INCLUDE_DIRECTORIES
     ${ATK_BRIDGE_INCLUDE_DIRS}
     ${GIO_UNIX_INCLUDE_DIRS}
     ${GLIB_INCLUDE_DIRS}
-    ${LIBSECCOMP_INCLUDE_DIRS}
     ${LIBSOUP_INCLUDE_DIRS}
 )
 
@@ -295,9 +294,12 @@ list(APPEND WebKit_LIBRARIES
     ${ATK_BRIDGE_LIBRARIES}
     ${GLIB_LIBRARIES}
     ${GLIB_GMODULE_LIBRARIES}
-    ${LIBSECCOMP_LIBRARIES}
     ${LIBSOUP_LIBRARIES}
 )
+
+if (ENABLE_BUBBLEWRAP_SANDBOX)
+    list(APPEND WebKit_LIBRARIES Libseccomp::Libseccomp)
+endif ()
 
 if (USE_GSTREAMER_FULL)
     list(APPEND WebKit_SYSTEM_INCLUDE_DIRECTORIES
