@@ -1,3 +1,14 @@
+2020-09-10  Adrian Perez de Castro  <aperez@igalia.com>
+
+        [CMake] Use imported targets in find module for libseccomp
+        https://bugs.webkit.org/show_bug.cgi?id=216329
+
+        Reviewed by Don Olmstead.
+
+        No new tests needed.
+
+        * PlatformGTK.cmake: Take the Libseccomp::Libseccomp imported target into use.
+
 2020-09-10  Youenn Fablet  <youenn@apple.com>
 
         Run captureCanvas-webrtc-software-encoder.html tests on all platforms
