@@ -1,3 +1,13 @@
+2020-09-10  Adrian Perez de Castro  <aperez@igalia.com>
+
+        [CMake] Use imported targets in find module for libseccomp
+        https://bugs.webkit.org/show_bug.cgi?id=216329
+
+        Reviewed by Don Olmstead.
+
+        * PlatformGTK.cmake: Remove unneeded usage of LIBSECCOMP_INCLUDE_DIRS.
+        * PlatformWPE.cmake: Take the Libseccomp::Libseccomp imported target into use.
+
 2020-09-10  Aditya Keerthi  <akeerthi@apple.com>
 
         [macOS] Add editability to input type=datetime-local
