@@ -1,3 +1,15 @@
+2020-09-10  Adrian Perez de Castro  <aperez@igalia.com>
+
+        [CMake] Use imported targets in find module for libseccomp
+        https://bugs.webkit.org/show_bug.cgi?id=216329
+
+        Reviewed by Don Olmstead.
+
+        * Source/cmake/BubblewrapSandboxChecks.cmake: Use Libseccomp_FOUND.
+        * Source/cmake/FindLibseccomp.cmake: Rewrite to define the
+        Libseccomp::Libseccomp target, fall-back to read version from the main
+        header, and define variables with Libseccomp_ as prefix.
+
 2020-09-04  Adrian Perez de Castro  <aperez@igalia.com>
 
         Unreviewed. [WPE] Bump version numbers
